<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_food"
        android:title="@string/menu_food"
        android:icon="@drawable/food"
        android:orderInCategory="150"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_thermostat"
        android:title="@string/menu_thermostat"
        android:icon="@drawable/home1"
        android:orderInCategory="200"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_automobile"
        android:title="@string/menu_automobile"
        android:icon="@drawable/gas"
        android:orderInCategory="250"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/t_help"
        android:title="@string/t_help_title"/>

    <item
        android:id="@+id/t_stats"
        android:title="@string/t_stats_title" />

</menu>