<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gasDetailsParent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.thanh.mobilefinal.AutomobileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llGaDetailsSummary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="#382E3C"
                android:text="@string/btn_add_gas_purchased"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="#382E3C"
                android:text="@string/btn_history"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvGasRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#228899"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/gas_records"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:id="@+id/llGasDetailsHead"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#2299dd"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/price_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/amount_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/distance_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/date_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="#FFFFFF"
                android:text="@string/delete_title" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/glLoading"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="1"
            android:layout_below="@id/llGasDetailsHead"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:text="@string/label_loading"
                android:textAlignment="center"/>

            <ProgressBar
                android:id="@+id/pbLoadGasDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                style="?android:attr/progressBarStyleHorizontal"/>

            <TextView
                android:id="@+id/tvLoadingPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:textAlignment="center"/>
        </GridLayout>

        <ListView
            android:id="@+id/lvGasPurchase"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>



</RelativeLayout>

