<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/starttext"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="#7fbf7f"
            android:gravity="center"
            android:text="@string/title_activity_nutrition"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/addButton_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99cc99"
            android:text="@string/addbutton"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/listtext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#e5f2e5"
            android:gravity="center"
            android:text="@string/introduceRecord"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="15sp" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/f_listview_Frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="#e5f2e5"
        android:layout_below="@+id/linearLayout">

    </FrameLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="271dp"
        android:background="#329932"
        android:text="@string/calculate" />

</RelativeLayout>
