<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thanh.mobilefinal.food_avg">

    <TextView
        android:id="@+id/AvgView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/avgM" />

    <TextView
        android:id="@+id/avaragevalue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/AvgView"
        android:textSize="15sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/daytext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/avaragevalue"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/dayNum" />

    <TextView
        android:id="@+id/dayvalue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/daytext"
        android:textSize="15sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/yesterdaytext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/dayvalue"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/calN" />

    <TextView
        android:id="@+id/yesterdayvalue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/yesterdaytext"
        android:textSize="15sp"
        android:gravity="center"
        />

</RelativeLayout>
